@@ -14,6 +14,9 @@
 # 	autoconf (optional)
 #
 # $Log$
+# Revision 1.6.2.1  2005/01/11 13:47:02  ilmari
+# Fix sendmail_mail{stats,traffic} autoconf handling.
+#
 # Revision 1.6  2005/01/03 14:17:30  jimmyo
 # Plugins generic/sendmail_mail{stats,traffic} updated.
 #
@@ -25,7 +28,7 @@
 if [ -n "$mailstats" ]; then MAILSTATS=$mailstats; else MAILSTATS=`which mailstats`; fi
 
 if [ "$1" = "autoconf" ]; then
-	if [ -x $MAILSTATS ]; then
+	if [ -n "$MAILSTATS" ] && [ -x "$MAILSTATS" ]; then
 		echo yes
 		exit 0
 	else
